feat: support token auto group priorities
